[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/00_Extras/RockBlock__destructive__5x32x32_sprites_gs.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WallDestructible.gd" type="Script" id=3]
[ext_resource path="res://Scenes/StatsNode.tscn" type="PackedScene" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="WallDestructible" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="StatsNode" parent="." instance=ExtResource( 4 )]
maxHealth = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="StatsNode" to="." method="_on_StatsNode_no_health"]

[editable path="Hurtbox"]
